2004-06-07  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* IgProfPerf.cc (add): Drop profileSignalHandlerFrame ().

2004-06-05  Lassi A. Tuura  <lat@iki.fi>

	* IgProfPerf.cc (add): Increase and document the number of stack
	frames to drop.  Need to drop off signal delivery stack frames.

2004-06-04  Lassi A. Tuura  <lat@iki.fi>

	* igprof: Only support profiling.  Clean up option handling and
	document all available options; remove option shortcuts.  Support
	performance profiler options to select timer.

	* IgProfPerf.cc: Support real, user and process time profiling.
	Select the timer and signal to use based on this choice.

	* IgProfMem.cc: Make "live" memory track both final live memory
	(= leaked memory) and maximum live memory in each call context.

2004-05-16  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Optionally demangle symbols.  Sanitise symbol
	and library names in HTML output.  Make sure all counters are
	always correctly tracked, including unknown counters specified on
	the command line.

2004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Take short options. Output text, html and xml.

	* test/test_load.cc: Reduce loop counts, we now do real locking
	so programs run much slower.

	* IgProf.cc, IgProfPerf.cc: Wise up.  The pthreads locking stuff
	does not work with asynchronous signals.  So make each thread keep
	its own tree roots so the (performance) profiling module can add
	add entries to private tree without interlocking threads.  For
	locks go back to regular pthreads mutexes, the are required so
	that concurrent lock attempts (e.g. calls to malloc in several
	threads simultaneously) continue to work.

	* igprof-analyse: Sort parents and callers too.

	* igprof-analyse: Improve by-caller sorting.

	* IgProf.cc: Counters are now large numbers.

	* igprof-analyse: Optionally output libraries.  Sort by caller.

42004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc, IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc: